# organum

./: LICENSE  README.md  pyproject.toml
docs/: index.html
manual/: case-study-inspector-duel.en.md  case-study-inspector-duel.json  case-study-inspector-duel.md  quickstart-inspector.en.md  quickstart-inspector.md  quickstart-observe.en.md  quickstart-observe.md
src/organum/: __init__.py  __main__.py  adapters.py  agora.py  alarm.py  checkup.py  cli.py  delegate.py  distill.py  field.py  guard.py  guard_rules.json  htmlreport.py  hub.py  inspect.py  inspector.py  integrity.py  mcp.py  memory.py  migrate.py  observatory.py  provision.py  reflect.py  relay.py  roster.py  session.py  state.py  web.py
tests/: test_adapters.py  test_agora.py  test_alarm.py  test_checkup.py  test_delegate.py  test_distill.py  test_escalation.py  test_guard.py  test_htmlreport.py  test_hub.py  test_inspector.py  test_integrity.py  test_invariants.py  test_mcp.py  test_migrate.py  test_observatory.py  test_provision.py  test_reflect.py  test_relay.py  test_roster.py  test_session.py  test_state.py  test_web.py
tests/fixtures/: guard_cases.jsonl  guard_streak_seq.jsonl  injection_samples.jsonl
tests/fixtures/ludex/: guard_cases.jsonl  guard_cases_r2.jsonl  streak_seq.jsonl
