[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "organum"
version = "0.1.3"
description = "Organism Engineering CLI — accumulate identity, differentiated memory, world models and maps for the agent you already use."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jihoon Jeong" }]
keywords = ["agent", "memory", "cli", "organism-engineering", "context"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.scripts]
organum = "organum.cli:main"
organum-inspector = "organum.inspector:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
organum = ["guard_rules.json"]
